# CoTask

./: .gitmodules  README.md  package-lock.json  package.json
assets/pages/: design.md
backend/: .env  README.md  docker-compose.yml  initdb.sql  main.py  pyproject.toml
backend/all/: BackgroundProcessor.py  MessageSender.py  RiskAlgorithm.py  SheduledTask.py  TasksExtractor.py  excelParser.py
backend/all/resources/: Sample1.json  Sample2.xlsx  Sample3.xlsx
backend/docker/: Dockerfile
backend/resources/: Sample1.json  Sample1.xlsx  Sample2.json  Sample3.json  Sample4.json  Sample4.xlsx
backend/src/: BackgroundProcessor.py  MessageSender.py  RiskAlgorithm.py  config.py  database.py  excelParser.py  main.py  models.py  schemas.py  services.py  test.py
backend/src/utils/: BackgroundProcessor.py  MessageSender.py  excelParser.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.js
frontend/src/components/: ErrorMessage.jsx  Header.jsx  Login.jsx  Register.jsx
frontend/src/context/: UserContext.jsx
